[gd_scene load_steps=7 format=2]

[ext_resource path="res://test/teleportal/portal.gd" type="Script" id=1]
[ext_resource path="res://test/teleportal/Area2D.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/light.png" type="Texture" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("view")

[sub_resource type="OccluderPolygon2D" id=2]
closed = false
cull_mode = 2
polygon = PoolVector2Array( -1, -9, 1, -9, 1, 9, -1, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 8 )

[node name="portal" type="Line2D"]
light_mask = 2
points = PoolVector2Array( 0, -8, 0, 8 )
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )
script = ExtResource( 1 )

[node name="render_polygon" type="Polygon2D" parent="."]
light_mask = 2
texture = SubResource( 1 )
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )
uv = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )
vertex_colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[node name="cull" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cull"]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 2 )
light_mask = 2

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="view" type="Viewport" parent="."]
size = Vector2( 640, 320 )
render_target_v_flip = true

[node name="pov" type="Light2D" parent="view"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
texture_scale = 50.0
mode = 3
shadow_enabled = true

[connection signal="body_entered" from="cull" to="." method="_on_cull_body_entered"]
[connection signal="body_shape_entered" from="cull" to="." method="_on_cull_body_shape_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
